--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,7 @@ addons:
   postgresql: 9.6
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate
+matrix:
+  allow_failures:
+    - rvm: 2.4
+    - rvm: 2.5
