--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 #->Prelang (env_variables:dotenv)
 # Ignore .env file so sensitive environment variables are not checked into Git.
 .env
-
+/vendor/bundle
 /public/packs
 /public/packs-test
 /node_modules
